crates/lang/tests/ui/contract/fail/constructor-input-non-codec.stderr
error[E0277]: the trait bound `NonCodecType: WrapperTypeDecode` is not satisfied
  --> tests/ui/contract/fail/constructor-input-non-codec.rs:13:28
   |
13 |         pub fn constructor(_input: NonCodecType) -> Self {
   |                            ^^^^^^^^^^^^^^^^^^^^ the trait `WrapperTypeDecode` is not implemented for `NonCodecType`
   |
   = note: required because of the requirements on the impl of `parity_scale_codec::Decode` for `NonCodecType`
note: required by a bound in `DispatchInput`
  --> src/codegen/dispatch/type_check.rs
   |
   |     T: scale::Decode + 'static;
   |        ^^^^^^^^^^^^^ required by this bound in `DispatchInput`

error[E0277]: the trait bound `NonCodecType: WrapperTypeDecode` is not satisfied
  --> tests/ui/contract/fail/constructor-input-non-codec.rs:13:9
   |
13 | /         pub fn constructor(_input: NonCodecType) -> Self {
14 | |             Self {}
15 | |         }
   | |_________^ the trait `WrapperTypeDecode` is not implemented for `NonCodecType`
   |
   = note: required because of the requirements on the impl of `parity_scale_codec::Decode` for `NonCodecType`

error[E0277]: the trait bound `NonCodecType: WrapperTypeEncode` is not satisfied
  --> tests/ui/contract/fail/constructor-input-non-codec.rs:13:9
   |
13 | /         pub fn constructor(_input: NonCodecType) -> Self {
14 | |             Self {}
15 | |         }
   | |_________^ the trait `WrapperTypeEncode` is not implemented for `NonCodecType`
   |
   = note: required because of the requirements on the impl of `Encode` for `NonCodecType`
note: required by a bound in `ExecutionInput::<ArgumentList<ArgumentListEnd, ArgumentListEnd>>::push_arg`
  --> $WORKSPACE/crates/env/src/call/execution_input.rs
   |
   |         T: scale::Encode,
   |            ^^^^^^^^^^^^^ required by this bound in `ExecutionInput::<ArgumentList<ArgumentListEnd, ArgumentListEnd>>::push_arg`
